--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,7 +19,10 @@ jobs:
       env:
         SSH_PRIVATE_KEY: ${{ secrets.GILVER_ADMIN_KEY }}
       run: |
-        mkdir -p ~/.ssh
+        if [ ! -d ~/.ssh ]; then
+          mkdir ~/.ssh
+        fi
+        chmod 700 ~/.ssh
         echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
         ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
