--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -36,7 +36,8 @@ jobs:
     
     - name: Run ssh-keyscan
       run: |
-        ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/sshdir/known_hosts
+          ssh-keyscan -v -H ${{ secrets.SERVER_IP }} >> ~/sshdir/known_hosts
+      
     
     - name: Deploy to AWS instance
       run: |
