--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,10 +1,10 @@
-name: Deploy
+name: Deploy to EC2
 
 on:
   pull_request:
-    branches:
-      - main
     types: [closed]
+    branches: 
+      - main
 
 jobs:
   deploy:
@@ -15,51 +15,19 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Setup SSH directory
-      run: |
-        mkdir -p ~/.ssh
-
-    - name: Set up SSH key
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.GILVER_ADMIN_KEY}}
-      run: |
-        echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-
-    - name: Set permissions on SSH key
-      run: |
-        chmod 600 ~/.ssh/id_rsa
-    
-    - name: Run ssh-keyscan
-      run: |
-        ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
-      
-    - name: Deploy to AWS instance
-      run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.SERVER_IP }} "
-            # Update system
-            sudo apt update
-            sudo apt install apache2 -y
-            sudo apt install php libapache2-mod-php php-mysql -y
-
-            # Install Composer
-            curl -sS https://getcomposer.org/installer | sudo php -- --install-dir=/usr/local/bin --filename=composer
-
-            # Clone and update the repository
-            git clone git@github.com:Elsilaves/road_mgmt.git
-            cd road_mgmt
-            git pull origin main
-            composer install
-            cp .env.example .env
-            php artisan key:generate
-            php artisan migrate
-
-            # Set permissions and copy Laravel app into Apache directory
-            sudo chown -R www-data:www-data .
-            sudo chmod -R 755 .
-            sudo cp -r * /var/www/html
-          "
-        
-      env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    - name: Deploy to EC2
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SERVER_IP }}
+        username: ubuntu
+        key: ${{ secrets.DEPLOY_KEY }}
+        script: |
+          cd /var/www/html
+          git pull origin main
+          composer install --no-interaction --prefer-dist --optimize-autoloader
+          php artisan migrate --force
+          php artisan cache:clear
+          php artisan config:cache
+          php artisan route:cache
+          php artisan view:cache
+          sudo systemctl restart apache2
