--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -21,6 +21,7 @@ jobs:
         host: ${{ secrets.SERVER_IP }}
         username: ubuntu
         key: ${{ secrets.DEPLOY_KEY2 }}
+        ssh_known_hosts: github.com
         script: |
           cd /var/www/html
           git pull origin main
