--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         host: ${{ secrets.SERVER_IP }}
         username: ubuntu
-        key: ${{ secrets.DEPLOY_KEY2 }}
+        key: ${{ secrets.DEPLOY_KEY }}
         ssh_known_hosts: github.com
         script: |
           cd /var/www/html
