--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -22,7 +22,9 @@ jobs:
       - name: Install composer Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Install node dependencies
-        run: npm ci
+        run: |
+          npm install
+          npm ci
       - name: Setup Project
         run: |
           php artisan config:clear
@@ -58,5 +60,6 @@ jobs:
             php artisan config:cache
             php artisan route:cache
             php artisan view:cache
+            npm install
             npm ci
             npm run prod
