--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -4,7 +4,28 @@ on:
     types: [closed]
     branches: [main]
 jobs:
+  setup:
+    runs-on: self-hosted
+    steps:
+      - name: Install Docker
+        run: |
+          sudo apt-get update
+          sudo apt-get install \
+            apt-transport-https \
+            ca-certificates \
+            curl \
+            gnupg \
+            lsb-release
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+          echo \
+            "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
+            $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt-get update
+          sudo apt-get install docker-ce docker-ce-cli containerd.io
+          sudo usermod -aG docker $USER
+
   deploy:
+    needs: setup
     runs-on: self-hosted
     if: github.event.pull_request.merged == true
     steps:
@@ -41,8 +62,6 @@ jobs:
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           DB_DATABASE: ${{ secrets.DB_DATABASE }}
         run: php artisan test
-      - name: Install Apache
-        run: sudo apt-get update && sudo apt-get install -y apache2
       - name: Deploy to Server
         uses: appleboy/ssh-action@master
         with:
