--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -4,31 +4,18 @@ on:
     types: [closed]
     branches: [main]
 jobs:
-  setup:
+  deploy:
     runs-on: self-hosted
+    if: github.event.pull_request.merged == true
     steps:
       - name: Install Docker
         run: |
           sudo apt-get update
-          sudo apt-get install -y \
-            apt-transport-https \
-            ca-certificates \
-            curl \
-            gnupg \
-            lsb-release
-          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-          echo \
-            "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
-            $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt-get install apt-transport-https ca-certificates curl software-properties-common gnupg lsb-release -y
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+          sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
           sudo apt-get update
-          sudo apt-get install -y docker-ce docker-ce-cli containerd.io
-          sudo usermod -aG docker $USER
-
-  deploy:
-    needs: setup
-    runs-on: self-hosted
-    if: github.event.pull_request.merged == true
-    steps:
+          sudo apt-get install docker-ce -y
       - uses: actions/checkout@v2
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -70,6 +57,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script_stop: true
           script: |
+            sudo /usr/bin/docker build -t 6a7b4d:5dcd1deb59984efe8a49991c2380bf52 -f "/home/***/actions-runner/_work/_actions/appleboy/ssh-action/master/Dockerfile" "/home/***/actions-runner/_work/_actions/appleboy/ssh-action/master"
             cd /var/www/html/
             sudo --preserve-env=SSH_AUTH_SOCK git clone git@github.com:Elsilaves/road_mgmt.git
             cd road_mgmt
