--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: self-hosted
     if: github.event.pull_request.merged == true
     steps:
+      - name: Add user to Docker group
+        run: sudo usermod -aG docker $USER
       - name: Install Docker
         run: |
           sudo apt-get update
