--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -9,7 +9,10 @@ jobs:
     if: github.event.pull_request.merged == true
     steps:
       - name: Add user to Docker group
-        run: sudo usermod -aG docker $USER
+        run: |
+          sudo usermod -aG docker $USER
+          newgrp docker
+      - uses: actions/checkout@v2
       - name: Install Docker
         run: |
           sudo apt-get update
