--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   DB_CONNECTION: mysql
-  DB_HOST: ${{ secrets.DB_HOST }}
+  DB_HOST: ${{ secrets.DB_SECRET }}
   DB_PORT: ${{ secrets.DB_PORT }}
   DB_DATABASE: ${{ secrets.DB_DATABASE }}
   DB_USERNAME: ${{ secrets.DB_USERNAME }}
