--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -8,11 +8,12 @@ on:
 
 env:
   DB_CONNECTION: mysql
-  DB_HOST: ${{ secrets.DB_SECRET }}
+  DB_HOST: ${{ secrets.DB_HOST }}
   DB_PORT: ${{ secrets.DB_PORT }}
   DB_DATABASE: ${{ secrets.DB_DATABASE }}
   DB_USERNAME: ${{ secrets.DB_USERNAME }}
   DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+  APP_KEY: ${{ secrets.APP_KEY }}
 
 jobs:
   setup-env:
@@ -21,14 +22,24 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
-          extensions: mbstring, pdo_mysql # Specify your required extensions here
+          extensions: mbstring, pdo_mysql, amqp, dba, enchant, gd, imagick, imap, pdo_dblib, pdo_firebird, pdo_pgsql, pgsql, pspell, tidy, zip, memcached # Specify your required extensions here
+          coverage: xdebug
 
       - name: Install Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+
+      - name: Generate key
+        run: php artisan key:generate
+
+      - name: Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
 
       - name: Execute tests (Unit and Feature tests) via PHPUnit
         run: vendor/bin/phpunit
